[package]
name = "chameleon"
version = "0.1.1"
edition = "2021"
description = "Chameleon — minimal terminal emulator in Rust"

[dependencies]
arboard = "3.2"
crossterm = "0.27"
directories = "5"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"
ureq = { version = "2", features = ["json"] }
vte = "0.13"
